Fixed dark-light mode icon positioning on mobile screen

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   left: 0;
@@ -157,6 +157,6 @@ nav ul li span:hover {
   .dark-light-mode {
     position: fixed;
     top: 4.5rem;
-    right: 1.5rem;
+    right: 4.6rem;
   }
 }
